# dgengine-cj

./: BUILD.txt  LICENSE.Zlib.txt  LICENSE.txt  cjpm.toml
.github/workflows/: main.yml
dependencies/: CMakePresets.json
dependencies/cenum/: License.txt  cjpm.toml
dependencies/cenum/src/: common.cj  enums.cj
dependencies/cjsfml/: .gitignore  License.txt  README.md  cjpm-release-dynamic.toml  cjpm-release-static.toml  cjpm.toml  download_csfml.sh
dependencies/cjsfml/src/: cjsfml.cj
dependencies/ctemplate/: .gitattributes  cjpm.toml
dependencies/ctemplate/src/: ctemplate.cj
dependencies/customiterators/: cjpm.toml
dependencies/customiterators/src/: peekiterator.cj  reverseiterators.cj
dependencies/endian/: cjpm.toml
dependencies/endian/src/: endian.cj
dependencies/physfs4cj/: License.txt  README.md  build.cj  cjpm-release-dynamic.toml  cjpm-release-static.toml  cjpm.toml
dependencies/physfs4cj/physfs/: CMakePresets.json
dependencies/physfs4cj/src/: ffi.cj  physfs.cj  physfs_test.cj  physfsfile.cj  physfsfile_test.cj
dependencies/stdjson2/: .gitignore  README.md  build.cj  cjpm-release-dynamic.toml  cjpm-release-static.toml  cjpm.toml
dependencies/stdjson2/stdjson2/: CMakeLists.txt  CMakePresets.json
dependencies/stdjson2/stdjson2/src/: stdjson2_string_escape.c  stdjson2_string_escape.h  stdjson2_utils.c
dependencies/stdlog/: License.txt  README.md  cjpm.toml
docs/drawables/: text.md
docs/resources/: font.md
src/: ActImage.cj  BitmapFont.cj  CompositeSprite.cj  FreeTypeText.cj  Game.cj  GameProperties.cj  GameQueryable.cj  Image.cj  ImageUtils.cj  Palette.cj  ParseTexture.cj  ParseTexturePackRects.cj  PhysFSStream.cj  SimpleImageContainer.cj  Sprite.cj  Surface.cj  TextureGroup.cj  View.cj  actaudio.cj  actcondition.cj  actdrawable.cj  actfont.cj  actio.cj  actionlist.cj  actmenu.cj  actmount.cj  actsound.cj  acttext.cj  animationgroup.cj  baseanimation.cj  bitmapbutton.cj  bitmapfont.cj  bitmapfonttexturepack.cj  bitmaptext.cj  blendmode.cj  button.cj  cachedimagepack.cj  cmdlineutils.cj  compositesprite.cj  elapsedtime.cj  (+129 more)
src/test/: BitmapButton_test.cj  ImageUtils_test.cj  Image_test.cj  MakeButton_test.cj  MakeTexture_test.cj  ParseBitmapFontTexturePack_test.cj  ParseCompositeTexturePack_test.cj  ParseImageContainer_test.cj  ParseTexturePackAnimatedTextures_test.cj  ParseTexture_test.cj  ParseUtilsKey_test.cj  ParseUtilsVal_test.cj  SFMLUtils_test.cj  SaveUtils_test.cj  bitmapbutton_test.cj  circle_test.cj  easedvalue_test.cj  elapsedtime_test.cj  fileutils_test.cj  formula_test.cj  game_test.cj  gamefixture_test.cj  gameutils_test.cj  image_test.cj  imageutils_test.cj  jsonutils_test.cj  maketexture_test.cj  numbervector_test.cj  parsebitmapfonttexturepack_test.cj  parsecompositetexturepack_test.cj  parsefilebytes_test.cj  parseimagecontainer_test.cj  parseimagecontainertexturepack_test.cj  parsemultiimagecontainertexturepack_test.cj  parsemultitexturetexturepack_test.cj  parsepalette_test.cj  parserproperties_test.cj  parsesingletexturetexturepack_test.cj  parsestackedtexturepack_test.cj  parsetexture_test.cj  (+16 more)
(+180 files in other folders)
